# budoux

./: .flake8  .gitignore  .markdownlint.yaml  .style.yapf  MANIFEST.in  README.md  app.js  bump_version.py  mypy.ini  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build-demo.yml  codeql.yml  dependency-review.yml  java-unittest.yml  javascript-unittest.yml  nodejs-unittest.yml  nodejs_unittest.yml  py-unittest.yml  py_unittest.yml  release.yml  scorecard.yml  style-check.yml  train.yml  train_ja_knbc.yml
budoux/: __init__.py  feature_extractor.py  html_processor.py  main.py  parser.py  skip_nodes.json  unicode_blocks.json  utils.py
budoux/models/: ja-knbc.json  ja.json  zh-hans.json  zh-hant.json
data/finetuning/ja/: train.txt  val.txt
demo/: package-lock.json  package.json  tsconfig.json
demo/scripts/: dev.mjs
demo/src/: app.ts  worker.ts
demo/static/: index.html
golang/: README.md  go.mod  parser.go  parser_test.go
golang/models/: ja.go  model.go  model_test.go  th.go  zh-hans.go  zh-hant.go
java/: .gitignore  README.md  pom.xml
java/src/main/java/com/google/budoux/: HTMLProcessor.java  Parser.java
java/src/test/java/com/google/budoux/: HTMLProcessorConsistencyTest.java  HTMLProcessorTest.java  ParserTest.java
javascript/: .eslintignore  .eslintrc.json  .prettierrc.js  README.md  biome.json  eslint.config.mjs  karma.conf.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
javascript/scripts/: check-cli-version.js  copy-data.js
javascript/src/: applier.ts  cli.ts  dom-browser.ts  dom.ts  html_processor.ts  index.ts  parser.ts  utils.ts  win-browser.ts  win.ts
javascript/src/tests/: index.browser.ts  index.node.ts  test_cli.ts  test_html_processor.ts  test_parser.ts  test_utils.ts  test_webcomponents.ts  testutils-browser.ts  testutils.ts
javascript/src/tests/browser/: test_webcomponents.ts
javascript/src/tests/data/: separate_right_before_a.json
javascript/src/tests/node/: test_cli.ts
javascript/src/tests/shared/: test_html_processor.ts  test_parser.ts
javascript/src/webcomponents/: budoux-base.ts  budoux-ja.ts  budoux-th.ts  budoux-zh-hans.ts  budoux-zh-hant.ts
javascript/tests/: test_applier.ts  test_cli.ts  test_html_processor.ts  test_parser.ts  test_utils.ts
javascript/tests/models/: separate_right_before_a.json
node_cli/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
node_cli/src/: main.ts
node_cli/tests/: test_main.ts
scripts/: README.md  build_model.py  context.py  encode_data.py  evaluate_model.py  find_conflicts.py  finetune.py  load_knbc.py  prepare_knbc.py  prepare_wisesight.py  synthesize_samples.py  train.py  translate_model.py
scripts/tests/: test_build_model.py  test_encode_data.py  test_evaluate_model.py  test_find_conflicts.py  test_finetune.py  test_prepare_knbc.py  test_synthesize_samples.py  test_train.py  test_translate_model.py
tests/: context.py  html_processor_shared_results.json  test_encode_data.py  test_feature_extractor.py  test_html_processor.py  test_html_processor_consistency.py  test_main.py  test_parser.py  test_quality.py  test_train.py  test_utils.py
tests/in/: 2.in  3.in
tests/quality/: ja.tsv
