[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budoux"
dynamic = ["version"]
description = "BudouX is the successor of Budou"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Shuhei Iitsuka", email = "tushuhei@google.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
jaxcpu = [
    "jax==0.9.0; python_version >= '3.11'",
]
dev = [
    "build",
    "flake8",
    "isort",
    "mypy==1.19.1",
    "pytest",
    "regex",
    "toml",
    "twine",
    "types-regex",
    "types-setuptools",
    "yapf",
]

[project.scripts]
budoux = "budoux.main:main"

[tool.setuptools.dynamic]
version = {attr = "budoux.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["budoux*"]

[tool.setuptools.package-data]
budoux = ["models/*.json", "skip_nodes.json", "py.typed"]

[dependency-groups]
dev = [
    "build",
    "flake8",
    "isort",
    "mypy==1.19.1",
    "pytest",
    "regex",
    "toml",
    "twine",
    "types-regex",
    "types-setuptools",
    "yapf",
    "jax==0.9.0; python_version >= '3.11'",
]

[tool.yapf]
based_on_style = "yapf"


[tool.mypy]
python_version = "3.10"
pretty = true
strict = true
allow_untyped_calls = true
