[metadata]
name = budoux
version = 0.0.2
description = BudouX is the successor of Budou
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Shuhei Iitsuka
author_email = tushuhei@google.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
test_suite = tests

[options.entry_points]
console_scripts =
    budoux = budoux.main:main

[yapf]
based_on_style = yapf
