[metadata]
name = budoux
version = attr: budoux.__init__.__version__
description = BudouX is the successor of Budou
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Shuhei Iitsuka
author_email = tushuhei@google.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires= >= 3.7
packages = find:
include_package_data = True
test_suite = tests

[options.extras_require]
dev =
    build
    flake8
    html5lib
    isort
    numpy
    mypy==0.971
    pytest
    toml
    twine
    types-html5lib
    types-setuptools
    yapf

[options.entry_points]
console_scripts =
    budoux = budoux.main:main

[yapf]
based_on_style = yapf

[flake8]
# E124: closing bracket does not match visual indentation
# E126: over-indentation
# E501: line too long
# BLK100: black formattable
ignore = E124,E126,E501,BLK100
indent-size = 2

[mypy]
python_version = 3.9
pretty = True
strict = True
